Migrated the main objects representing a Snapshot from org.json to dsl-json to improve performance, new object introduced for this type of deserialization